# fuzzamoto

./: Cargo.toml  Dockerfile  Dockerfile.coverage  Dockerfile.libafl  Dockerfile.libafl.bench  README.md  print.html  searchindex.js  searchindex.json
.github/workflows/: benchmark-comment.yml  benchmark.yml  rust.yml
ci/: benchmark-evaluation.py  libafl.justfile
doc/src/: README.md
doc/src/contributing/: ir.md
doc/src/design/: ir.md
doc/src/usage/: aflpp.md  coverage.md  libafl.md  reproducing.md
fuzzamoto-cli/src/: error.rs  main.rs
fuzzamoto-cli/src/commands/: coverage.rs  coverage_batch.rs  init.rs  ir.rs
fuzzamoto-cli/src/utils/: nyx.rs  process.rs
fuzzamoto-ir/src/: bloom.rs  builder.rs  compiler.rs  instruction.rs  lib.rs  metadata.rs  operation.rs  variable.rs
fuzzamoto-ir/src/generators/: add_connection.rs  address.rs  advance_time.rs  block.rs  block_txn.rs  bloom_filter.rs  compact_block.rs  compact_filters.rs  getaddr.rs  getdata.rs  mod.rs  send_raw_message.rs  tx.rs  txo.rs  witness.rs
fuzzamoto-ir/src/minimizers/: cutting.rs  instr_block.rs
fuzzamoto-ir/src/mutators/: combine.rs  concat.rs  input.rs  operation.rs
fuzzamoto-libafl/src/: client.rs  fuzzer.rs  instance.rs  monitor.rs  mutators.rs  options.rs
fuzzamoto-libafl/src/feedbacks/: mod.rs
fuzzamoto-libafl/src/stages/: mod.rs  probe.rs  (+1 more)
fuzzamoto-nyx-sys/: build.rs
fuzzamoto-nyx-sys/src/: nyx-agent.c  nyx-crash-handler.c
fuzzamoto-scenarios/: Cargo.toml
fuzzamoto/src/: connections.rs  oracles.rs  runners.rs
target-patches/: bitcoin-core-ir-denylist.txt
(+5 files in other folders)
