[workspace]
resolver = "3"
members = [
  "fuzzamoto",
  "fuzzamoto-cli",
  "fuzzamoto-ir",
  "fuzzamoto-nyx-sys",
  "fuzzamoto-scenarios",
  "fuzzamoto-libafl",
]
exclude = ["vendor/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Niklas Gögge <n.goeggi@gmail.com>"]
license = "MIT"
repository = "https://github.com/dergoegge/fuzzamoto"

[workspace.lints.clippy]
# Deny 
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# We allow these
struct_field_names = { level = "allow" }
struct_excessive_bools = { level = "allow" }
too_many_lines = { level = "allow" }
result_large_err = { level = "allow" }
large_enum_variant = { level = "allow" }
missing_panics_doc = { level = "allow" }
missing_errors_doc = { level = "allow" }
similar_names = { level = "allow" }
unsafe_derive_deserialize = { level = "allow" }
upper_case_acronyms = { level = "allow" }

[workspace.lints.rust]
warnings = "deny"
